--- a/mpFormats_2018/mpFormats_2018.csproj
+++ b/mpFormats_2018/mpFormats_2018.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\ModPlus_builded\Functions\mpFormats\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\mpFormats\</OutputPath>
     <DefineConstants>TRACE;DEBUG;ac2013</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,30 +24,34 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\mpFormats\</OutputPath>
+    <DefineConstants>TRACE;ac2013</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
-      <HintPath>..\..\..\..\Acad dlls\2018\accoremgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\accoremgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\Acad dlls\2018\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\Acad dlls\2018\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
-      <HintPath>..\..\..\..\ModPlus_builded\MahApps.Metro.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\MahApps.Metro.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ModPlusAPI">
+      <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\ModPlusAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ModPlus_2018">
-      <HintPath>..\..\..\..\ModPlus_builded\ModPlus_2018.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\ModPlus_2018.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -56,15 +60,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>..\..\..\..\ModPlus_builded\System.Windows.Interactivity.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -94,12 +92,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\MpFormats_16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\MpFormats_32x32.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Stamps.xml" />
@@ -152,26 +144,6 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\MpStampFields_32x32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\mpExWin\mpMsg.csproj">
-      <Project>{cb3b96a0-57c2-44c5-af59-5cec27da599e}</Project>
-      <Name>mpMsg</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\mpPInterface\mpPInterface.csproj">
-      <Project>{769afe8c-728a-49df-acde-325a961b809f}</Project>
-      <Name>mpPInterface</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\mpSettings\mpSettings.csproj">
-      <Project>{04f6a42c-3492-4430-a0f1-5ddfcea0fddd}</Project>
-      <Name>mpSettings</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Page Include="..\mpFormats_2010\EditUserSurnames.xaml">
       <Link>EditUserSurnames.xaml</Link>
       <Generator>MSBuild:Compile</Generator>
@@ -194,14 +166,25 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\..\..\Flags\belarus_thin_rectangular_icon_64.png">
+    <Resource Include="..\mpFormats_2010\Resources\Flags\belarus_thin_rectangular_icon_64.png">
       <Link>Resources\Flags\belarus_thin_rectangular_icon_64.png</Link>
     </Resource>
-    <Resource Include="..\..\..\Flags\russia_thin_rectangular_icon_64.png">
+    <Resource Include="..\mpFormats_2010\Resources\Flags\russia_thin_rectangular_icon_64.png">
       <Link>Resources\Flags\russia_thin_rectangular_icon_64.png</Link>
     </Resource>
-    <Resource Include="..\..\..\Flags\ukraine_thin_rectangular_icon_64.png">
+    <Resource Include="..\mpFormats_2010\Resources\Flags\ukraine_thin_rectangular_icon_64.png">
       <Link>Resources\Flags\ukraine_thin_rectangular_icon_64.png</Link>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="..\mpFormats_2010\Resources\MpFormats_16x16.png">
+      <Link>Resources\MpFormats_16x16.png</Link>
+    </Resource>
+    <Resource Include="..\mpFormats_2010\Resources\MpFormats_32x32.png">
+      <Link>Resources\MpFormats_32x32.png</Link>
+    </Resource>
+    <Resource Include="..\mpFormats_2010\Resources\MpStampFields_32x32.png">
+      <Link>Resources\MpStampFields_32x32.png</Link>
     </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
