--- a/mpFormats_2010/mpFormats_2010.csproj
+++ b/mpFormats_2010/mpFormats_2010.csproj
@@ -34,11 +34,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2010\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2010\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2010\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2010\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
