--- a/mpFormats_2013/mpFormats_2013.csproj
+++ b/mpFormats_2013/mpFormats_2013.csproj
@@ -34,15 +34,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\accoremgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2013\accoremgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2013\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2013\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
