Внесены изменения в связи с обновлением боковых надписей согласно ГОСТ 21.1101-2013 Приложение Ж

--- a/mpFormats_2011/mpFormats_2011.csproj
+++ b/mpFormats_2011/mpFormats_2011.csproj
@@ -34,11 +34,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2011\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2011\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2011\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2011\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
