--- a/mpFormats_2018/mpFormats_2018.csproj
+++ b/mpFormats_2018/mpFormats_2018.csproj
@@ -31,15 +31,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
-      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2018\accoremgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\accoremgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2018\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\..\..\Пекшев\Acad dlls\2018\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\_Acad dlls\2018\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
