--- a/mpFormats_2013/mpFormats_2013.csproj
+++ b/mpFormats_2013/mpFormats_2013.csproj
@@ -17,8 +17,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\mpFormats\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;ac2013</DefineConstants>
+    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\AutoCAD\mpFormats\</OutputPath>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -26,31 +26,31 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\mpFormats\</OutputPath>
-    <DefineConstants>TRACE;ac2013</DefineConstants>
+    <OutputPath>..\..\..\..\..\..\..\ModPlus\Functions\AutoCAD\mpFormats\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\accoremgd.dll</HintPath>
+      <HintPath>C:\_Acad dlls\2013\accoremgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\acdbmgd.dll</HintPath>
+      <HintPath>C:\_Acad dlls\2013\acdbmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\_Acad dlls\2013\acmgd.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="MahApps.Metro">
-      <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\MahApps.Metro.dll</HintPath>
+      <HintPath>C:\_Acad dlls\2013\acmgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ModPlusAPI">
       <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\ModPlusAPI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ModPlusStyle">
+      <HintPath>..\..\..\..\..\..\..\ModPlus\Extensions\ModPlusStyle.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ModPlus_2013">
@@ -64,26 +64,24 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\mpFormats_2010\EditUserSurnames.xaml.cs">
-      <Link>EditUserSurnames.xaml.cs</Link>
-      <DependentUpon>EditUserSurnames.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="..\mpFormats_2010\LayoutName.xaml.cs">
-      <Link>LayoutName.xaml.cs</Link>
+    <Compile Include="LayoutName.xaml.cs">
       <DependentUpon>LayoutName.xaml</DependentUpon>
     </Compile>
-    <Compile Include="..\mpFormats_2010\MpFormats.xaml.cs">
-      <Link>MpFormats.xaml.cs</Link>
-      <DependentUpon>MpFormats.xaml</DependentUpon>
+    <Compile Include="EditUserSurnames.xaml.cs">
+      <DependentUpon>EditUserSurnames.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interface.cs" />
+    <Compile Include="MpFormats.xaml.cs">
+      <DependentUpon>MpFormats.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfoCommon.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -97,98 +95,68 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Stamps.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\b_1.png">
-      <Link>Resources\Preview\b_1.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\b_2.png">
-      <Link>Resources\Preview\b_2.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\F_10.png">
-      <Link>Resources\Preview\F_10.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\F_5.png">
-      <Link>Resources\Preview\F_5.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_0.png">
-      <Link>Resources\Preview\img_0.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_1.png">
-      <Link>Resources\Preview\img_1.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_10.png">
-      <Link>Resources\Preview\img_10.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_12.png">
-      <Link>Resources\Preview\img_12.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_14.png">
-      <Link>Resources\Preview\img_14.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_15.png">
-      <Link>Resources\Preview\img_15.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_16.png">
-      <Link>Resources\Preview\img_16.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_2.png">
-      <Link>Resources\Preview\img_2.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_3.png">
-      <Link>Resources\Preview\img_3.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\num.png">
-      <Link>Resources\Preview\num.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\top.png">
-      <Link>Resources\Preview\top.png</Link>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="..\mpFormats_2010\EditUserSurnames.xaml">
-      <Link>EditUserSurnames.xaml</Link>
+    <Page Include="LayoutName.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="..\mpFormats_2010\LayoutName.xaml">
-      <Link>LayoutName.xaml</Link>
+    <Page Include="EditUserSurnames.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="..\mpFormats_2010\MpFormats.xaml">
-      <Link>MpFormats.xaml</Link>
+    <Page Include="MpFormats.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\mpFormats_2010\Resources\Preview\img_7.png">
-      <Link>Resources\Preview\img_7.png</Link>
+    <Resource Include="Resources\Preview\b_2.png" />
+    <Resource Include="Resources\Preview\F_10.png" />
+    <Resource Include="Resources\Preview\F_5.png" />
+    <Resource Include="Resources\Preview\num.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\b_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Stamps.xml">
+      <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\mpFormats_2010\Resources\Flags\belarus_thin_rectangular_icon_64.png">
-      <Link>Resources\Flags\belarus_thin_rectangular_icon_64.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Flags\russia_thin_rectangular_icon_64.png">
-      <Link>Resources\Flags\russia_thin_rectangular_icon_64.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\Flags\ukraine_thin_rectangular_icon_64.png">
-      <Link>Resources\Flags\ukraine_thin_rectangular_icon_64.png</Link>
-    </Resource>
+    <Resource Include="Resources\Preview\img_0.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\mpFormats_2010\Resources\MpFormats_16x16.png">
-      <Link>Resources\MpFormats_16x16.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\MpFormats_32x32.png">
-      <Link>Resources\MpFormats_32x32.png</Link>
-    </Resource>
-    <Resource Include="..\mpFormats_2010\Resources\MpStampFields_32x32.png">
-      <Link>Resources\MpStampFields_32x32.png</Link>
-    </Resource>
+    <Resource Include="Resources\Preview\top.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\img_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\img_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\img_3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\img_10.png" />
+    <Resource Include="Resources\Preview\img_12.png" />
+    <Resource Include="Resources\Preview\img_14.png" />
+    <Resource Include="Resources\Preview\img_15.png" />
+    <Resource Include="Resources\Preview\img_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Preview\img_7.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Flags\by-icon.png" />
+    <Resource Include="Resources\Flags\ru-icon.png" />
+    <Resource Include="Resources\Flags\ua-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\mpFormats_16x16.png" />
+    <Resource Include="Resources\mpFormats_16x16_dark.png" />
+    <Resource Include="Resources\mpFormats_32x32.png" />
+    <Resource Include="Resources\mpFormats_32x32_dark.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
